bug fix for mobile nav

--- a/pages/about.html
+++ b/pages/about.html
@@ -89,11 +89,11 @@
     <div class="mobile-nav">
         <img class="close-mobile-nav" onclick="toggleMobileNav()" src="assets/svg/close-model-white.svg" />
         <div class="mobile-nav-items" onclick="animateRedirectTo('/')">Home</div>
-        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/product&service.html')">Services</div>
-        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/product&service.html#our-products')">Products
+        <div class="mobile-nav-items" onclick="animateRedirectTo('product&service.html')">Services</div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('product&service.html#our-products')">Products
         </div>
-        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/galleryhtml')">Gallery</div>
-        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/about.html')">About Us</div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('galleryhtml')">Gallery</div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('about.html')">About Us</div>
     </div>
 </div>
 
