--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Model Box Starts Here -->
     <div class="model-background hide-model">
-        <div class="modelBox">
+        <div class="modelBox animate-box">
             <img class="close-button" onclick="toggleModel()" src="../assets/svg/close-model.svg" />
             <div class="model-contents">
                 <div class="mail-form">
