contact us page added

--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -96,6 +96,7 @@
             <div class="mobile-nav-items" onclick="animateRedirectTo('product&service.html#our-products')">Products
             </div>
             <div class="mobile-nav-items" onclick="animateRedirectTo('gallery.html')">Gallery</div>
+            <div class="mobile-nav-items" onclick="animateRedirectTo('contact-us.html')">Contact Us</div>
             <div class="mobile-nav-items" onclick="animateRedirectTo('about.html')">About Us</div>
         </div>
     </div>
