--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="mobile-nav-items" onclick="animateRedirectTo('pages/product&service.html#our-products')">
                 Products</div>
             <div class="mobile-nav-items" onclick="animateRedirectTo('pages/gallery.html')">Gallery</div>
+            <div class="mobile-nav-items" onclick="animateRedirectTo('pages/contact-us.html')">Contact Us</div>
             <div class="mobile-nav-items" onclick="animateRedirectTo('pages/about.html')">About Us</div>
         </div>
     </div>
