--- a/pages/about.html
+++ b/pages/about.html
@@ -74,9 +74,11 @@
                         </div>
                     </div>
                     <div class="model-social-links">
-                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg"
+                            alt="Whatsapp Icon" />
                         <img class="model-social-icon" src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
+                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg"
+                            alt="Facebook Icon" />
                     </div>
                 </div>
             </div>
@@ -94,6 +96,7 @@
             <div class="mobile-nav-items" onclick="animateRedirectTo('product&service.html#our-products')">Products
             </div>
             <div class="mobile-nav-items" onclick="animateRedirectTo('gallery.html')">Gallery</div>
+            <div class="mobile-nav-items" onclick="animateRedirectTo('contact-us.html')">Contact Us</div>
             <div class="mobile-nav-items" onclick="animateRedirectTo('about.html')">About Us</div>
         </div>
     </div>
