--- a/pages/about.html
+++ b/pages/about.html
@@ -120,7 +120,7 @@
         <div id="hero-section-heading">
             <img id="hero-section-logo" src="../assets/svg/hero-section-logo.svg">
             <div id="services-title">About Us</div>&nbsp;
-            <div id="services-subtitle">Let us tell you who we are and what is our moto. Let's get to know each other.
+            <div id="services-subtitle">Let's talk a little about us, who we are and what is our moto.
             </div>
         </div>
     </div>
@@ -197,23 +197,22 @@
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
-                        <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
-                            WEST
-                            BENGAL, INDIA</div>
+                        <div class="detail-subtitle">Science College Road, Chantidih, Bilaspur, Chhattisgarh</div>
                     </div>
                 </div>
                 <div id="call-us">
                     <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-70001 62913</div>
+                        <div class="detail-subtitle">+91-99776 01404</div>
+                        <div class="detail-subtitle">+91-98279 17456</div>
                     </div>
                 </div>
                 <div id="email-us">
                     <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
-                        <div class="detail-subtitle">sara.sanders@gmail.com</div>
+                        <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
                     </div>
                 </div>
             </div>
@@ -221,28 +220,29 @@
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
                     <img class="social-icon" src="../assets/svg/whatsapp.svg">
-                    <a class="social-link-name" href="#">WhatsApp</a>
+                    <a class="social-link-name" target="_blank" href="https://wa.me/919827917456">WhatsApp</a>
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="../assets/svg/instagram.svg">
-                    <a class="social-link-name" href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
+                    <a class="social-link-name" target="_blank"
+                        href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
                 </div>
                 <div id="facebook">
                     <img class="social-icon" src="../assets/svg/facebook.svg">
-                    <a class="social-link-name" href="#">Facebook</a>
+                    <a class="social-link-name" target="_blank" href="https://wwww.facebook.com/bhawanidecorator/">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
                 <a id="quick-links-title">Quick Links</a>
                 <a class="quick-link-name" onclick="redirectHome()">Home</a>
                 <a class="quick-link-name" onclick="toggleModel()">Contact Us</a>
-                <a class="quick-link-name" onclick="redirectTo('product&service.html#our-products')">Our
+                <a class="quick-link-name" onclick="redirectTo('pages/product&service.html#our-products')">Our
                     Products</a>
-                <a class="quick-link-name" onclick="redirectTo('about.html')">About Us</a>
-                <a class="quick-link-name" onclick="redirectTo('product&service.html')">Our Services</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/about.html')">About Us</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/product&service.html')">Our Services</a>
             </div>
         </div>
-        <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
+        <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
             CreativeDroplets With GraphityFactory.</div>
     </footer>
     <!--Footer Ends-->
