--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -84,11 +84,16 @@
         </form>
 
         <div class="model-social-links">
-            <img class="model-social-icon" src="../assets/svg/call-model-icon.svg" alt="Facebook Icon" />
-            <img class="model-social-icon" src="../assets/svg/mail-model-icon.svg" alt="Facebook Icon" />
-            <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
-            <img class="model-social-icon" src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
-            <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
+            <img class="model-social-icon" onclick="redirectTo('tel:919977601404')"
+                src="../assets/svg/call-model-icon.svg" alt="Caller Icon" />
+            <img class="model-social-icon" onclick="redirectTo('mailto:decoratorsbhawani@gmail.com')"
+                src="../assets/svg/mail-model-icon.svg" alt="E-Mail Icon" /><img class="model-social-icon"
+                onclick="blankRedirect('https\://wa.me/919827917456')" src="../assets/svg/whatsapp-model-icon.svg"
+                alt="Whatsapp Icon" />
+            <img class="model-social-icon" onclick="blankRedirect('https\://www.instagram.com/bhawanidecorators/')"
+                src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
+            <img class="model-social-icon" onclick="blankRedirect('https\://wwww.facebook.com/bhawanidecorator/')"
+                src="../assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
         </div>
     </div>
 
@@ -104,23 +109,22 @@
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
-                        <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
-                            WEST
-                            BENGAL, INDIA</div>
+                        <div class="detail-subtitle">Science College Road, Chantidih, Bilaspur, Chhattisgarh</div>
                     </div>
                 </div>
                 <div id="call-us">
                     <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-70001 62913</div>
+                        <div class="detail-subtitle">+91-99776 01404</div>
+                        <div class="detail-subtitle">+91-98279 17456</div>
                     </div>
                 </div>
                 <div id="email-us">
                     <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
-                        <div class="detail-subtitle">sara.sanders@gmail.com</div>
+                        <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
                     </div>
                 </div>
             </div>
@@ -128,15 +132,17 @@
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
                     <img class="social-icon" src="../assets/svg/whatsapp.svg">
-                    <a class="social-link-name" href="#">WhatsApp</a>
+                    <a class="social-link-name" target="_blank" href="https://wa.me/919827917456">WhatsApp</a>
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="../assets/svg/instagram.svg">
-                    <a class="social-link-name" href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
+                    <a class="social-link-name" target="_blank"
+                        href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
                 </div>
                 <div id="facebook">
                     <img class="social-icon" src="../assets/svg/facebook.svg">
-                    <a class="social-link-name" href="#">Facebook</a>
+                    <a class="social-link-name" target="_blank"
+                        href="https://wwww.facebook.com/bhawanidecorator/">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
@@ -149,7 +155,7 @@
                 <a class="quick-link-name" onclick="redirectTo('product&service.html')">Our Services</a>
             </div>
         </div>
-        <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
+        <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
             CreativeDroplets With GraphityFactory.</div>
     </footer>
     <!--Footer Ends-->
