font and header title changed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="CSS/header&footer.css">
     <link rel="stylesheet" href="CSS/gallery.css">
     <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' />
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet' />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' />
+    <!-- <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet' /> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=Yeseva One' rel='stylesheet'> -->
+    <link href='https://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' /> -->
+    <link href='https://fonts.googleapis.com/css?family=Source Sans 3' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' />
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
     <link rel="shortcut icon" href="assets/Logo.png" />
@@ -68,9 +71,14 @@
                         </div>
                     </div>
                     <div class="model-social-links">
-                        <img class="model-social-icon" onclick="blankRedirect('https\://wa.me/919827917456')" src="assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
-                        <img class="model-social-icon" onclick="blankRedirect('https\://www.instagram.com/bhawanidecorators/')" src="assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" onclick="blankRedirect('https\://wwww.facebook.com/bhawanidecorator/')" src="assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
+                        <img class="model-social-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
+                            src="assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon"
+                            onclick="blankRedirect('https\://www.instagram.com/bhawanidecorators/')"
+                            src="assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
+                        <img class="model-social-icon"
+                            onclick="blankRedirect('https\://wwww.facebook.com/bhawanidecorator/')"
+                            src="assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
                     </div>
                 </div>
             </div>
@@ -100,7 +108,7 @@
     <div id="first-body">
         <div id="header" class="hide-header">
             <img id="header-logo" src="assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
-            <img id="header-title" style="cursor: unset;" src="assets/svg/Title.svg" alt="Title of Page">
+            <img id="header-title" style="cursor: unset;" src="assets/svg/Title-2.png" alt="Title of Page">
             <div id="header-nav">
                 <a class="nav-links" href="pages/product&service.html">Services</a>&nbsp;&nbsp;
                 <a class="nav-links" href="pages/gallery.html">Gallery</a>&nbsp;&nbsp;
@@ -110,8 +118,8 @@
             </div>
         </div>
         <header>
-            <img id="header-logo" src="assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
-            <img id="header-title" style="cursor: unset;" src="assets/svg/Title.svg" alt="Title of Page">
+            <img id="header-logo" src="assets/svg/Logo-2.svg" alt="Bhawani Decorators Logo">
+            <img id="header-title" style="cursor: unset;" src="assets/svg/Title-2.png" alt="Title of Page">
             <div id="header-nav">
                 <a class="nav-links" href="pages/product&service.html">Services</a>&nbsp;&nbsp;
                 <a class="nav-links" href="pages/gallery.html">Gallery</a>&nbsp;&nbsp;
@@ -126,8 +134,10 @@
                 <div id="text-binding">
                     <div>Your Home Is Beautiful,</div>
                     <div>Don't Believe Us?</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi dignissim id parturient pulvinar
-                        elementum. Bibendum auctor at lacinia congue risus posuere. Ultrices .</p>
+                    <p>We pleded to deliever satisfactory services to our customers. Our products guarantees to enhance
+                        the beauty of your
+                        home. make your home more stunning and beautiful. Consider Us for your next home decoration
+                        project.</p>
                 </div>
                 <div id="container-button">
                     <button type="button" onclick="redirectTo('pages/product&service.html#our-products')">See
