--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -12,10 +12,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Font Used: Cinzel, Playfair Display, Montserrat, Inter -->
-    <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' />
+    <!-- <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet' /> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=Yeseva One' rel='stylesheet'> -->
+    <link href='https://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' /> -->
+    <link href='https://fonts.googleapis.com/css?family=Source Sans 3' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' />
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
     <link rel="shortcut icon" href="../assets/Logo.png" />
 
@@ -106,7 +109,7 @@
 
     <header>
         <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
-        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title.svg" alt="Title of Page">
+            <img id="header-title" style="cursor: unset;" src="../assets/svg/Title-2.png" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
