--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -106,7 +106,8 @@
 
     <header>
         <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
-            <img id="header-title" style="cursor: unset;" src="../assets/svg/Title-2.png" alt="Title of Page">
+        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title-2.png"
+            alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
