--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -77,9 +77,11 @@
                         </div>
                     </div>
                     <div class="model-social-links">
-                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg"
+                            alt="Whatsapp Icon" />
                         <img class="model-social-icon" src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
+                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg"
+                            alt="Facebook Icon" />
                     </div>
                 </div>
             </div>
@@ -109,7 +111,7 @@
 
     <header>
         <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
-            <img id="header-title" style="cursor: unset;" src="../assets/svg/Title-2.png" alt="Title of Page">
+        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title-2.png" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
@@ -273,11 +275,13 @@
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="../assets/svg/instagram.svg">
-                    <a class="social-link-name" target="_blank" href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
+                    <a class="social-link-name" target="_blank"
+                        href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
                 </div>
                 <div id="facebook">
                     <img class="social-icon" src="../assets/svg/facebook.svg">
-                    <a class="social-link-name" target="_blank" href="https://wwww.facebook.com/bhawanidecorator/">Facebook</a>
+                    <a class="social-link-name" target="_blank"
+                        href="https://wwww.facebook.com/bhawanidecorator/">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
