all products added, fixed whatsapp button added

--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -133,16 +133,6 @@
     <div id="services">
         <div class="service-cards">
             <div class="service-card-texts">
-                <div class="service-card-title">Plaster Of Paris</div>
-                <div class="service-card-desc">Plaster of paris is the most popular choice for false ceiling. It can be
-                    crafted
-                    in
-                    stunning patterns with without
-                    wooden panels and light textures.</div>
-            </div>
-        </div>
-        <div class="service-cards">
-            <div class="service-card-texts">
                 <div class="service-card-title">Gypsum Board</div>
                 <div class="service-card-desc">Gypsum board is another popular choice for ceiling and offers a host of
                     elegant
@@ -169,17 +159,6 @@
         </div>
         <div class="service-cards">
             <div class="service-card-texts">
-                <div class="service-card-title">T - Section</div>
-                <div class="service-card-desc">Our products are carved out of superior quality raw materials sourced
-                    from
-                    reliable vendors of the market. This product
-                    line caters approximately all needs and requirement related to this domain. We can see this kind of
-                    work in bank and
-                    office.</div>
-            </div>
-        </div>
-        <div class="service-cards">
-            <div class="service-card-texts">
                 <div class="service-card-title">Wood</div>
                 <div class="service-card-desc">Wooden false ceiling have excellent natural patterns and textures that
                     can please
@@ -197,45 +176,108 @@
     </div>
     <div id="all-products">
         <div class="product-cards">
-            <div class="product-cards-name">Product Name
-                <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+            <div class="product-cards-name">Bit Corner
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
-                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name
-                <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+            <div class="product-cards-name">Cornish
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
-                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name
-                <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+            <div class="product-cards-name">Imported Cornish
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
-                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name
-                <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+            <div class="product-cards-name">Bracket
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
-                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name
-                <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+            <div class="product-cards-name">Central Panel
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
-                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name
-                <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+            <div class="product-cards-name">Star Screw
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
-                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Corner Corlesh
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Imported DOM
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Pillers
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Bit
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Gripper
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Joint Fiber Glass Tape
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">PVC Sheets
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">T-Section
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
+            </div>
+        </div>
+        <div class="product-cards">
+            <div class="product-cards-name">Plaster Of Paris Sheets
+                <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
+                    blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
+                    error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
             </div>
         </div>
     </div>
@@ -248,7 +290,8 @@
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
-                        <div class="detail-subtitle">Science College Road, Chantidih, Bilaspur, Chhattisgarh</div>
+                        <div class="detail-subtitle">Science College Road, Chantidih, Bilaspur, Chhattisgarh
+                        </div>
                     </div>
                 </div>
                 <div id="call-us">
@@ -294,7 +337,8 @@
                 <a class="quick-link-name" onclick="redirectTo('product&service.html')">Our Services</a>
             </div>
         </div>
-        <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
+        <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and
+            Developed by
             CreativeDroplets With GraphityFactory.</div>
     </footer>
     <!--Footer Ends-->
