whatsapp button add for all pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,13 @@
 </head>
 
 <body>
+    <!-- Whatsapp Button -->
+    <div class="sticky-button">
+        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
+            src="assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
+    </div>
+
+
     <!-- Model Box Starts Here -->
 
     <div class="model-background hide-model">
