--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -25,7 +25,11 @@
 </head>
 
 <body>
-
+    <!-- Whatsapp Button -->
+    <div class="sticky-button">
+        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
+            src="assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
+    </div>
     <!-- Mobile Navigation Starts Here -->
 
     <div class="mobile-nav-background">
