--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -25,6 +25,12 @@
 </head>
 
 <body>
+    <!-- Whatsapp Button -->
+    <div class="sticky-button">
+        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
+            src="assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
+    </div>
+
     <!-- Model Box Starts Here -->
     <div class="model-background hide-model">
         <div class="modelBox animate-box">
@@ -76,9 +82,11 @@
                         </div>
                     </div>
                     <div class="model-social-links">
-                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg"
+                            alt="Whatsapp Icon" />
                         <img class="model-social-icon" src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
+                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg"
+                            alt="Facebook Icon" />
                     </div>
                 </div>
             </div>
@@ -88,7 +96,7 @@
     <!-- Model Box Ends Here -->
 
     <!-- Mobile Navigation Starts Here -->
-    
+
     <div class="mobile-nav-background">
         <div class="mobile-nav">
             <img class="close-mobile-nav" onclick="toggleMobileNav()" src="../assets/svg/close-model-white.svg" />
@@ -101,18 +109,18 @@
             <div class="mobile-nav-items" onclick="animateRedirectTo('about.html')">About Us</div>
         </div>
     </div>
-    
+
     <!-- Mobile Navigation Ends Here -->
 
     <header>
         <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
-        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title-2.png"
-            alt="Title of Page">
+        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title-2.png" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
             <a class="nav-links" href="about.html">About Us</a>&nbsp;&nbsp;
-            <img id="burger-menu" onclick="toggleMobileNav()" src="../assets/svg/burget-menu.svg" alt="Burger Menu Icon">
+            <img id="burger-menu" onclick="toggleMobileNav()" src="../assets/svg/burget-menu.svg"
+                alt="Burger Menu Icon">
         </div>
     </header>
 
@@ -178,7 +186,8 @@
             </div>
         </div>
         <div class="portrait-images">
-            <img src="../assets/svg/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="productImage(-1)" />
+            <img src="../assets/svg/Previous.svg" class="slide-btn float-btn-left btn-main"
+                onclick="productImage(-1)" />
             <div class="portrait-images-box">
                 <img class="images first-image" src="../assets/product-images/product-image-01.jpg" alt="Image">
                 <img class="images" src="../assets/product-images/product-image-02.jpg" alt="Image">
@@ -200,61 +209,63 @@
     </div>
 
     <!--Footer Starts-->
-<footer>
-    <div id="footer-title">BHAWANI DECORATORS</div>
-    <div id="footer-links">
-        <div id="contact">
-            <div id="location">
-                <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
-                <div class="contact-details">
-                    <div class="detail-title">Address</div>
-                    <div class="detail-subtitle">Science College Road, Chantidih, Bilaspur, Chhattisgarh</div>
+    <footer>
+        <div id="footer-title">BHAWANI DECORATORS</div>
+        <div id="footer-links">
+            <div id="contact">
+                <div id="location">
+                    <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
+                    <div class="contact-details">
+                        <div class="detail-title">Address</div>
+                        <div class="detail-subtitle">Science College Road, Chantidih, Bilaspur, Chhattisgarh</div>
+                    </div>
+                </div>
+                <div id="call-us">
+                    <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
+                    <div class="contact-details">
+                        <div class="detail-title">Call Us</div>
+                        <div class="detail-subtitle">+91-99776 01404</div>
+                        <div class="detail-subtitle">+91-98279 17456</div>
+                    </div>
+                </div>
+                <div id="email-us">
+                    <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
+                    <div class="contact-details">
+                        <div class="detail-title">Email Us</div>
+                        <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
+                    </div>
                 </div>
             </div>
-            <div id="call-us">
-                <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
-                <div class="contact-details">
-                    <div class="detail-title">Call Us</div>
-                    <div class="detail-subtitle">+91-99776 01404</div>
-                    <div class="detail-subtitle">+91-98279 17456</div>
+            <div id="social-links">
+                <div id="social-links-title">Social Links</div>
+                <div id="whatsapp">
+                    <img class="social-icon" src="../assets/svg/whatsapp.svg">
+                    <a class="social-link-name" target="_blank" href="https://wa.me/919827917456">WhatsApp</a>
+                </div>
+                <div id="instagram">
+                    <img class="social-icon" src="../assets/svg/instagram.svg">
+                    <a class="social-link-name" target="_blank"
+                        href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
+                </div>
+                <div id="facebook">
+                    <img class="social-icon" src="../assets/svg/facebook.svg">
+                    <a class="social-link-name" target="_blank"
+                        href="https://wwww.facebook.com/bhawanidecorator/">Facebook</a>
                 </div>
             </div>
-            <div id="email-us">
-                <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
-                <div class="contact-details">
-                    <div class="detail-title">Email Us</div>
-                    <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
-                </div>
+            <div id="quick-links">
+                <a id="quick-links-title">Quick Links</a>
+                <a class="quick-link-name" onclick="redirectHome()">Home</a>
+                <a class="quick-link-name" onclick="toggleModel()">Contact Us</a>
+                <a class="quick-link-name" onclick="redirectTo('product&service.html#our-products')">Our
+                    Products</a>
+                <a class="quick-link-name" onclick="redirectTo('about.html')">About Us</a>
+                <a class="quick-link-name" onclick="redirectTo('product&service.html')">Our Services</a>
             </div>
         </div>
-        <div id="social-links">
-            <div id="social-links-title">Social Links</div>
-            <div id="whatsapp">
-                <img class="social-icon" src="../assets/svg/whatsapp.svg">
-                <a class="social-link-name" target="_blank" href="https://wa.me/919827917456">WhatsApp</a>
-            </div>
-            <div id="instagram">
-                <img class="social-icon" src="../assets/svg/instagram.svg">
-                <a class="social-link-name" target="_blank" href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
-            </div>
-            <div id="facebook">
-                <img class="social-icon" src="../assets/svg/facebook.svg">
-                <a class="social-link-name" target="_blank" href="https://wwww.facebook.com/bhawanidecorator/">Facebook</a>
-            </div>
-        </div>
-        <div id="quick-links">
-            <a id="quick-links-title">Quick Links</a>
-            <a class="quick-link-name" onclick="redirectHome()">Home</a>
-            <a class="quick-link-name" onclick="toggleModel()">Contact Us</a>
-            <a class="quick-link-name" onclick="redirectTo('product&service.html#our-products')">Our
-                Products</a>
-            <a class="quick-link-name" onclick="redirectTo('about.html')">About Us</a>
-            <a class="quick-link-name" onclick="redirectTo('product&service.html')">Our Services</a>
-        </div>
-    </div>
-    <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
-        CreativeDroplets With GraphityFactory.</div>
-</footer>
+        <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
+            CreativeDroplets With GraphityFactory.</div>
+    </footer>
     <!--Footer Ends-->
     <script src="../JavaScript/gallery.js"></script>
     <script src="../JavaScript/main.js"></script>
