--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
 
 
 <body>
-
+    <!-- Whatsapp Button -->
     <div class="sticky-button">
         <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
             src="assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
     </div>
-
 
     <!-- Model Box Starts Here -->
 
