whatsapp number changed

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -27,9 +27,10 @@
 <body>
     <!-- Whatsapp Button -->
     <div class="sticky-button">
-        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
-            src="assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
+        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/916264865070')"
+            src="../assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
     </div>
+
     <!-- Mobile Navigation Starts Here -->
 
     <div class="mobile-nav-background">
@@ -139,7 +140,7 @@
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
                     <img class="social-icon" src="../assets/svg/whatsapp.svg">
-                    <a class="social-link-name" target="_blank" href="https://wa.me/919827917456">WhatsApp</a>
+                    <a class="social-link-name" target="_blank" href="https://wa.me/916264865070">WhatsApp</a>
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="../assets/svg/instagram.svg">
