--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -25,10 +25,11 @@
 </head>
 
 <body>
+
     <!-- Whatsapp Button -->
     <div class="sticky-button">
-        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/919827917456')"
-            src="assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
+        <img class="sticky-whatsapp-icon" onclick="blankRedirect('https\://wa.me/916264865070')"
+            src="../assets/svg/whatsapp-model-icon.svg" alt="WhatsApp Icon">
     </div>
 
     <!-- Model Box Starts Here -->
@@ -57,43 +58,43 @@
                     <div class="main-heading">Contact Information</div>
                     <div id="location">
                         <img class="contact-icon" src="../assets/svg/location-black.svg" alt="Location Icon" />
-                        <div class="contact-details">
+                        <div class="contact-details"
+                            onclick="blankRedirect('https\://maps.google.com/?q=Science College Road, Chantidih, Bilaspur, Chhattisgarh')">
                             <div class="detail-title model-style">Address</div>
-                            <div class="detail-subtitle model-style">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE
-                                11(W)
-                                KOLKATA - 700
-                                073,
-                                WEST
-                                BENGAL, INDIA</div>
+                            <div class="detail-subtitle model-style">Science College Road, Chantidih, Bilaspur,
+                                Chhattisgarh</div>
                         </div>
                     </div>
                     <div id="call-us">
                         <img class="contact-icon" src="../assets/svg/phone-black.svg" alt="Location Icon" />
-                        <div class="contact-details">
+                        <div class="contact-details" onclick="redirectTo('tel:919977601404')">
                             <div class="detail-title model-style">Call Us</div>
-                            <div class="detail-subtitle model-style">+91-70001 62913</div>
+                            <div class="detail-subtitle model-style">+91-99776 01404</div>
                         </div>
                     </div>
                     <div id="email-us">
                         <img class="contact-icon" src="../assets/svg/email-black.svg" alt="Location Icon" />
-                        <div class="contact-details">
+                        <div class="contact-details" onclick="redirectTo('mailto:decoratorsbhawani@gmail.com')">
                             <div class="detail-title model-style">Email Us</div>
-                            <div class="detail-subtitle model-style">sara.sanders@gmail.com</div>
+                            <div class="detail-subtitle model-style">decoratorsbhawani@gmail.com</div>
                         </div>
                     </div>
                     <div class="model-social-links">
-                        <img class="model-social-icon" src="../assets/svg/whatsapp-model-icon.svg"
-                            alt="Whatsapp Icon" />
-                        <img class="model-social-icon" src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" src="../assets/svg/facebook-model-icon.svg"
-                            alt="Facebook Icon" />
+                        <img class="model-social-icon" onclick="blankRedirect('https\://wa.me/916264865070')"
+                            src="../assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon"
+                            onclick="blankRedirect('https\://www.instagram.com/bhawanidecorators/')"
+                            src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
+                        <img class="model-social-icon"
+                            onclick="blankRedirect('https\://wwww.facebook.com/bhawanidecorator/')"
+                            src="../assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- Model Box Ends Here -->
+
 
     <!-- Mobile Navigation Starts Here -->
 
@@ -240,7 +241,7 @@
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
                     <img class="social-icon" src="../assets/svg/whatsapp.svg">
-                    <a class="social-link-name" target="_blank" href="https://wa.me/919827917456">WhatsApp</a>
+                    <a class="social-link-name" target="_blank" href="https://wa.me/916264865070">WhatsApp</a>
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="../assets/svg/instagram.svg">
