more photos added

--- a/index.html
+++ b/index.html
@@ -191,14 +191,10 @@
             </div>
             <div class="service-cards">
                 <div class="service-card-texts">
-                    <div class="service-card-title">Plaster Of Paris</div>
-                    <div class="service-card-desc">Plaster of paris is the most popular choice for false ceiling. It
-                        can
-                        be
-                        crafted
-                        in
-                        stunning patterns with without
-                        wooden panels and light textures.</div>
+                    <div class="service-card-title">PVC</div>
+                    <div class="service-card-desc">Made from the robust plastic. PVC is a low maintenance for ceiling
+                        variety. It stays for years and it is available in
+                        wide variety of designs and colours.</div>
                 </div>
             </div>
             <div class="service-cards">
