--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -264,7 +264,7 @@
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">PVC Sheets
+            <div class="product-cards-name">PVC Laminated Tiles
                 <!-- <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div> -->
